--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,34 @@
 {
-  "name": "Finanzas Diarias",
-  "short_name": "Finanzas",
-  "start_url": "./index.html",
+  "name": "LOGICSOFT",
+  "short_name": "LOGICSOFT",
+  "start_url": "./",
+  "scope": "./",
   "display": "standalone",
-  "background_color": "#0d1b2a",
-  "theme_color": "#0d1b2a",
-  "orientation": "portrait-primary",
+  "orientation": "any",
+  "background_color": "#ffffff",
+  "theme_color": "#003366",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon-512.png",
+      "src": "icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
+    },
+    {
+      "src": "icons/icon-192-maskable.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "icons/icon-512-maskable.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ]
 }
